Run JUnit tests with `--add-opens java.base/java.util=ALL-UNNAMED`